--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
         <reportingModuleVersion>0.10.4</reportingModuleVersion>
         <addresshierarchyVersion>2.9</addresshierarchyVersion>
         <htmlformentryVersion>3.8.0</htmlformentryVersion>
-        <appuiVersion>1.7</appuiVersion>
+        <appuiVersion>1.12.0-SNAPSHOT</appuiVersion>
         <coreappsVersion>1.11.1</coreappsVersion>
         <serializationXstreamModuleVersion>0.2.12</serializationXstreamModuleVersion>
         <eventVersion>2.5</eventVersion>
